# agentic_pipeline

./: README.md  pyproject.toml
profiles/etcs/: profile.yaml
profiles/etcs/chains/: emergency_stop_basic.json  ma_gradient.json  ma_standard_sr_fs.json  ma_two_sections.json  session_establishment.json
profiles/etcs/instantiator/: defaults.yaml
profiles/etcs/kinematics/: categories.yaml
profiles/etcs/prompts/: normalizer.md  planner_fewshot.md  planner_system.md
profiles/etcs/rag/: hints.yaml
profiles/etcs/rules/: crossmessage.yaml  messages.yaml
profiles/etcs/schemas/: linked_list.json  scenario_features.json
profiles/etcs/spec/: subset026_v360.md
profiles/etcs/statemachines/: etcs_modes.yaml
src/etcs_pipeline/: main.py
src/etcs_pipeline/cache/: indexer.py  semantic_cache.py
src/etcs_pipeline/components/: formatter.py  instantiator.py  normalizer.py  planner.py  validator.py
src/etcs_pipeline/components/plausibility/: __init__.py  cross_message.py  kinematics.py  state_machine.py
src/etcs_pipeline/config/: llm_client.py  loader.py  settings.py
src/etcs_pipeline/core/: graph.py  runner.py  state.py
src/etcs_pipeline/rag/: loader.py  retriever.py
tests/fixtures/scenarios/: emergency_stop.txt  ma_standard.txt  session_establishment.txt
tests/integration/: test_pipeline_emergency_stop.py  test_pipeline_ma_standard.py  test_pipeline_session.py
tests/unit/: conftest.py  test_cross_message.py  test_instantiator.py  test_state_machine.py  test_validator.py
