[project]
name = "etcs-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "llama-index-core>=0.10.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "sentence-transformers>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "jsonschema>=4.22.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
etcs-pipeline = "etcs_pipeline.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etcs_pipeline"]

[tool.pytest.ini_options]
markers = ["integration: tests that require a live LLM API and DB (run with -m integration)"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
